# rearrangement_benchmark

./: .gitmodules  README.md  local_setup.sh  pyproject.toml
.docker/control/: Dockerfile.control  docker-compose-control.yaml
.docker/motion_planning/: Dockerfile.motion_planning  docker-compose-motion-planning.yaml
.github/workflows/: control.yaml  motion_planning.yaml
mujoco_ravens/: README.md  actuators.py  base_scene.py  cameras.py  props.py  rearrangement_task.py  robot.py  ros2_start_docker.py  ros_mujoco_client.py  scene.py  sensors.py  sim_control_client.py  task.py  visualization.py
mujoco_ravens/config/: scene.yaml
mujoco_ravens/config/cameras/: default.yaml
mujoco_ravens/config/props/: default.yaml
mujoco_ravens/config/robots/: default.yaml
mujoco_ravens/config/task/: default.yaml
mujoco_ravens/models/arms/: franka_emika.py
mujoco_ravens/ros2_ws/: README.md
rearrangement_benchmark/: MJDATA.TXT  base_scene.py  controller_tuner.py  interactive_controller_tuning.ipynb  rearrangement_task.py  task.py  transporter_network_data_generation.py  vcp_data_generation.py
rearrangement_benchmark/config/cameras/: transporter_data_collection.yaml
rearrangement_benchmark/config/props/: default.yaml
rearrangement_benchmark/config/robots/: default.yaml  motor.yaml
rearrangement_benchmark/config/task/: default.yaml  tuning.yaml
rearrangement_benchmark/env_components/: base_scene.py  cameras.py  props.py  robot.py
rearrangement_benchmark/models/arms/: franka_emika.py
rearrangement_benchmark/ros2_sim_api/: README.md  ros_start_docker.py
(+11 files in other folders)
